# recipe-api

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: graphql.py  rest.py
app/core/: config.py
app/db/: models.py  repo.py  session.py
app/domain/: schemas.py
app/services/: ai.py  recipes.py
tests/: conftest.py  test_ai_recommendation.py  test_graphql_recipes.py  test_rest_recipes.py
